--- a/style.css
+++ b/style.css
@@ -88,6 +88,8 @@ header {
     height: 60px;
     width: auto;
     margin-right: 15px;
+    border-radius: 4px;
+    object-fit: contain;
 }
 
 .logo-text h1 {
@@ -914,6 +916,8 @@ footer {
     height: 40px;
     width: auto;
     margin-bottom: 15px;
+    border-radius: 4px;
+    object-fit: contain;
 }
 
 .social-links {
@@ -1013,6 +1017,25 @@ footer {
         display: flex;
     }
     
+    .logo a {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+    
+    .logo-image {
+        height: 50px;
+        margin-right: 0;
+        margin-bottom: 10px;
+    }
+    
+    .logo-text h1 {
+        font-size: 1.3rem;
+    }
+    
+    .logo-text span {
+        font-size: 0.8rem;
+    }
+    
     .hero h1 {
         font-size: 2rem;
     }
@@ -1080,5 +1103,9 @@ footer {
     
     .page-banner p {
         font-size: 1rem;
+    }
+    
+    .footer-logo-img {
+        height: 35px;
     }
 }
